# macos-wallpaper

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs  utils.rs
macos-wallpaper/: Cargo.toml
macos-wallpaper/src/: lib.rs
