[package]
name = "cli"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
macos-wallpaper = { path = "../macos-wallpaper" }
icrate = { git = "https://github.com/madsmtm/objc2", features = [
    "AppKit_NSColor",
] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
