[package]
name = "cli"
version = "0.1.0"
authors = ["Allister Isaiah Harvey <a.i.harvey@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
macos-wallpaper = { path = "../macos-wallpaper" }
objc2 = { workspace = true }
objc2-app-kit = { version = "0.2.2", features = ["NSColor"] }
objc2-foundation = { version = "0.2.2", features = ["NSGeometry"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
