[package]
name = "macos-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icrate = { git = "https://github.com/madsmtm/objc2", features = [
    "apple",
    "AppKit",
    "AppKit_NSScreen",
    "AppKit_NSColor",
    "AppKit_NSImageView",
    "AppKit_NSWorkspace",
    "Foundation",
    "Foundation_NSArray",
    "Foundation_NSDictionary",
    "Foundation_NSMutableDictionary",
    "Foundation_NSFileManager",
    "Foundation_NSURL",
    "Foundation_NSNumber",
] }
inline-python = "0.10.0"
