[package]
name = "macos-wallpaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc2 = { workspace = true }
objc2-app-kit = { workspace = true, features = ["NSCell", "NSColor", "NSScreen", "NSWorkspace"] }
objc2-foundation = { version = "0.2.2", features = ["NSEnumerator", "NSKeyValueCoding", "NSPathUtilities", "NSString", "NSThread"] }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
